--- a/requirements.txt
+++ b/requirements.txt
@@ -23,7 +23,7 @@ pycparser==2.22
 pydantic==2.6.4
 pydantic_core==2.16.3
 pypng==0.20220715.0
-pytest==8.1.1
+pytest
 pytest-asyncio==0.23.6
 pytest-mock==3.14.0
 python-dotenv==1.0.1
