--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,8 @@ click==8.1.7
 cryptography==42.0.5
 ecdsa==0.18.0
 exceptiongroup==1.2.0
-fastapi
-gunicorn
+fastapi==0.110.2
+gunicorn==23.0.0
 h11==0.14.0
 httpcore==1.0.5
 httpx==0.27.0
@@ -18,12 +18,12 @@ iniconfig==2.0.0
 packaging==24.0
 passlib==1.7.4
 pluggy==1.4.0
-pyasn1==0.6.0
+pyasn1==0.4.8
 pycparser==2.22
 pydantic==2.6.4
 pydantic_core==2.16.3
 pypng==0.20220715.0
-pytest
+pytest==8.1.1
 pytest-asyncio==0.23.6
 pytest-mock==3.14.0
 python-dotenv==1.0.1
