Implement reliable Trivy scanning

--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -84,3 +84,25 @@ jobs:
           severity: 'CRITICAL,HIGH'
         retries: 3
         retry-wait-seconds: 30
+        retry-on-error:
+          - 'trivy: error scanning'
+          - 'trivy: error building'
+          - 'trivy: error downloading'
+          - 'trivy: error parsing'
+          - 'trivy: error processing'
+          - 'trivy: error reporting'
+          - 'trivy: error scanning'
+          - 'trivy: error sending'
+          - 'trivy: error uploading'
+          - 'trivy: error waiting'
+          - 'trivy: timeout'
+          - 'trivy: unable to'
+          - 'trivy: unable to connect'
+          - 'trivy: unable to download'
+          - 'trivy: unable to parse'
+          - 'trivy: unable to process'
+          - 'trivy: unable to report'
+          - 'trivy: unable to scan'
+          - 'trivy: unable to send'
+          - 'trivy: unable to upload'
+          - 'trivy: unable to wait'
